--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ button{
   margin: 0 10px;
   padding: 10px 30px;
   border: none;
-  background-color: rgb(218, 242, 77);
+  background-color:rgb(236, 241, 77); 
   border-radius: 10px;
   font-family: Arial, Helvetica, sans-serif;
   font-weight: 700;
@@ -36,23 +36,92 @@ button{
   right: 50%;
 }
 
-@media only screen and (min-width:320px) and (max-width:650px) {
+@media only screen and (min-width:320px) and (max-width:556px) {
   
   .buttonGroup{
     margin-top: 120px;
     }
     h1{
+      color: rgb(183, 248, 248);
       font-size: 20px;
+      margin-bottom: 30px;
     }
     .app{
       height: 50vh;
-      width: 100%;
+      width: 50%;
+      display: flex;
       display: flex;
       justify-content: center;
-      align-items: center;
       text-align: center;
+      align-items: center;
     }
     .button{
       padding: 5px 10px;
+    }
+    button{
+      position: absolute;
+      cursor: pointer;
+      display: flex;
+      margin: 0 10px;
+      padding: 8px 25px;
+      border: none;
+      background-color: rgb(183, 248, 248);
+      border-radius: 10px;
+      font-family: Arial, Helvetica, sans-serif;
+      font-weight: 700;
+      box-shadow: -4px -4px 8px  rgb(240, 233, 233);
+    }
+    /* .button-yes{
+      left: 5%;
+    } */
+    html{
+      font-family: cursive;
+      background-color: black;
+      padding:0 50% ;
+    }
+}
+
+@media only screen and (min-width:557px) and (max-width:880px) {
+  
+  .buttonGroup{
+    margin-top: 120px;
+    }
+    h1{
+      color: rgb(69, 247, 120);
+      font-size: 30px;
+      margin-bottom: 80px;
+    }
+    .app{
+      height: 50vh;
+      width: 50%;
+      display: flex;
+      display: flex;
+      justify-content: center;
+      text-align: center;
+      align-items: center;
+    }
+    .button{
+      padding: 5px 10px;
+    }
+    button{
+      position: absolute;
+      cursor: pointer;
+      display: flex;
+      margin: 0 10px;
+      padding: 8px 25px;
+      border: none;
+      background-color: rgb(69, 247, 120);
+      border-radius: 10px;
+      font-family: Arial, Helvetica, sans-serif;
+      font-weight: 700;
+      box-shadow: -4px -4px 8px  rgb(240, 233, 233);
+    }
+    /* .button-yes{
+      left: 5%;
+    } */
+    html{
+      font-family: cursive;
+      background-color: black;
+      padding:0 50% ;
     }
 }
